# sublimate

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PLAN.md  README.md  config.yml  debug_match.py  main.py  pyproject.toml  quick-erd.txt
.github/workflows/: ci.yml  dependency-update.yml
agent_templates/default/: sublimate-compose.yml  tester.md
agent_templates/default/heartbeats/: coder_heartbeat.md  main_heartbeat.md
default_agent_templates/: coder.md  main.md
default_agent_templates/heartbeats/: tester_heartbeat.md
docs/: composer.md
docs/backend/: endpoints.md
docs/composer/: BaseAgent.md  BaseComposer.md  BaseTask.md  FileAccessControls.md  Heartbeat.md  HeartbeatComposer.md  OVERVIEW.md  PipelineComposer.md  README.md  create_composer.md
docs/tasks/: websockets_and_streaming.md
docs/testing/: mocking-database.md
docs/tools/: index.md
src/agents/templates/default/: sublimate-compose.yml
src/backend/: .gitignore  app.py  database.py  models.py  pyproject.toml  schemas.py
src/backend/dependencies/: services.py
src/backend/routers/: agent.py  agents.py  auth.py  chat.py  message.py  project.py  projects.py  provider.py  providers.py  task.py
src/backend/services/: project_service.py  task_service.py
src/backend/static/css/: app.css
src/backend/static/js/: app.js
src/backend/templates/: index.html
src/composer/: __init__.py  agent.py  composer.py  tools.py
src/config/: __init__.py
src/db/: database.py  models.py
src/orchestration/: __init__.py  agent.py  chat.py  composer.py  heartbeat.py  message.py  project.py  task.py  tools.py
src/schemas/: agent.py  data.py  message.py  project.py  provider.py  task.py
src/services/: agent.py  chat.py  checkpointer.py  connection_manager.py  message.py  project.py  provider.py  registry.py  task.py
tests/: conftest.py  test_agent.py  test_agent_service.py  test_chat.py  test_chat_service.py  test_checkpointer.py  test_composer.py  test_file_access_integration.py  test_message.py  test_message_service.py  test_orchestration_project.py  test_permissions.py  test_project.py  test_project_service.py  test_provider_service.py  test_routers.py  test_task.py  test_task_service.py  test_tools.py
